Feat: Add Probe Endpoint (#118)
* Feat: Add probe schema

* Docs: Update api docs

* Feat: Add 409 http status code

* Feat: Add probe service

* Feat: Register probe service to router

* Test: Add test
